fixed contrast and added scope to tables on index of home and events controller

--- a/OBM/Content/Site.css
+++ b/OBM/Content/Site.css
@@ -102,7 +102,7 @@ nav {
 }
 
 a, .siteStyle {
-    color: #35b143;
+    color: #007a0c;
 }
 
 a:hover, .siteStyle:hover {
